[package]
name = "heavyimp"
description = "A type-checker for Heavy Imp, for CS 45600"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "heavyimp"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"


[[bin]]
name = "heavyimp"
path = "src/main.rs"

[dependencies]
lazy_static = "1.4.0"
pest = "2.5.0"
pest_derive = "2.5.0"
wasm-bindgen = "0.2.83"


[target.'cfg(not(target_family = "wasm"))'.dependencies]
quickcheck = "1"
